@@ -11,12 +11,12 @@ td.forum-icon {
   display: block;
 }
 
-tr.even td.forum-folder .forum-icon-wrapper span, 
+tr.even td.forum-folder .forum-icon-wrapper span,
 tr.odd td.forum-folder .forum-icon-wrapper span {
   background: transparent url(images/forum_list_default.png) no-repeat center center;
 }
 
-tr.even td.forum-folder-new-posts .forum-icon-wrapper span, 
+tr.even td.forum-folder-new-posts .forum-icon-wrapper span,
 tr.odd td.forum-folder-new-posts .forum-icon-wrapper span {
   background: transparent url(images/forum_list_new_posts.png) no-repeat center center;
 }
@@ -85,4 +85,19 @@ span.topic-icon {
 
 .topic-icon-closed {
   background: transparent url(images/topic_list_closed.png) no-repeat top left;
+}
+
+span.forum-collapsible {
+  width: 9px;
+  height: 100%;
+  text-indent: -9999px;
+  display: block;
+  margin-left: 10px;
+  float: right;
+  background: transparent url(images/container_collapse.png) no-repeat center center;
+
+}
+
+span.container-collapsed {
+  background: transparent url(images/container_expand.png) no-repeat center center;
 }
